--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,5 +10,5 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello Andoroid!"/>
+            android:text="Hello Andoroid!" android:textSize="40sp"/>
 </LinearLayout>
